# sandboxedCamera

./: .gitignore  compile_app.py  creds  custom_reloader.py  index.json  main.py  pyproject.toml  qr_reader.py  security.py  send_app_to_phone.py
camera4kivy/: preview.py  preview_camerax.py  preview_kivycamera.py
configs/: last_port_used
images/: DAll-E dog pic.json  bleach villain introduction.json
screens/: camera_screen.kv  camera_screen.py  gallery_screen.kv  gallery_screen.py  imageviewer_screen.kv  imageviewer_screen.py  main_screen.kv  main_screen.py  qrreaderhelper_screen.kv  qrreaderhelper_screen.py  user_screen.kv
temp/: ._kivy_super_reloader  .gitignore  custom_reloader.py  rules.conf  send_app_to_phone.py  utils.py
temp/screens/: main_screen.kv  main_screen.py  user_screen.py
