[tool.poetry]
name = "sandboxedkivycamera"
version = "0.1.0"
description = ""
authors = ["Arjun-Somvanshi <arjunsomvanshi@gmai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^0.29.32"
kaki = "^0.1.5"
trio = "^0.22.0"
kivy = "^2.1.0"
plyer = "^2.1.0"
psutil = "^5.9.4"
pycryptodome = "^3.15.0"
ffpyplayer = "^4.3.5"
buildozer = {url = "https://github.com/kivy/buildozer/archive/master.zip"}

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
